[gd_scene load_steps=2 format=3 uid="uid://c8vhkv5pfunxo"]

[ext_resource type="Script" uid="uid://d1cmoupbq6kh1" path="res://scripts/CandyShopScene.gd" id="1"]

[node name="CandyShopScene" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0.94, 0.9, 1, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="Panel" parent="UI"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 80.0

[node name="TimerBar" type="ProgressBar" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 440.0
offset_top = 20.0
offset_right = 840.0
offset_bottom = 60.0
max_value = 10.0
value = 10.0
show_percentage = false

[node name="TimerLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 620.0
offset_top = 25.0
offset_right = 660.0
offset_bottom = 55.0
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 850.0
offset_top = 25.0
offset_right = 1050.0
offset_bottom = 55.0
text = "üí∞ ÈáëÂ∏Å: 0"

[node name="ProgressLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 200.0
offset_top = 25.0
offset_right = 400.0
offset_bottom = 55.0
text = "ËøõÂ∫¶: 0/5"

[node name="BackButton" type="Button" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 110.0
offset_bottom = 60.0
text = "üè† ËøîÂõû"

[node name="GameTimerLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 1060.0
offset_top = 25.0
offset_right = 1270.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 18
text = "üï∞Ô∏è Ê∏∏ÊàèÊó∂Èó¥: 10:00"
horizontal_alignment = 1

[node name="ShopArea" type="Control" parent="UI"]
anchors_preset = 0
offset_top = 100.0
offset_right = 1280.0
offset_bottom = 620.0

[node name="ShopSprite" type="Sprite2D" parent="UI/ShopArea"]
position = Vector2(640, 150)

[node name="CandyDisplay" type="Label" parent="UI/ShopArea"]
layout_mode = 0
offset_left = 590.0
offset_top = 150.0
offset_right = 690.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 64
text = "üç¨"
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="UI/ShopArea"]
layout_mode = 0
offset_left = 340.0
offset_top = 270.0
offset_right = 940.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(0.12773594, 0.12773594, 0.12773594, 1)
theme_override_font_sizes/font_size = 32
text = "üç¨ Á≥ñÊûú‰ª∑Ê†ºÔºö25 ÂÖÉ"
horizontal_alignment = 1

[node name="PayLabel" type="Label" parent="UI/ShopArea"]
layout_mode = 0
offset_left = 340.0
offset_top = 340.0
offset_right = 940.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(0.15487596, 0.154876, 0.15487596, 1)
theme_override_font_sizes/font_size = 32
text = "üí∞ Â∞èÂãáÂ£´ÊîØ‰ªòÔºö50 ÂÖÉ"
horizontal_alignment = 1

[node name="AnswerContainer" type="HBoxContainer" parent="UI/ShopArea"]
layout_mode = 0
offset_left = 290.0
offset_top = 420.0
offset_right = 990.0
offset_bottom = 500.0
theme_override_constants/separation = 50
alignment = 1

[node name="AnswerBtn1" type="Button" parent="UI/ShopArea/AnswerContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ÊâæÈõ∂ 10 ÂÖÉ"

[node name="AnswerBtn2" type="Button" parent="UI/ShopArea/AnswerContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ÊâæÈõ∂ 15 ÂÖÉ"

[node name="AnswerBtn3" type="Button" parent="UI/ShopArea/AnswerContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ÊâæÈõ∂ 20 ÂÖÉ"

[node name="FeedbackPanel" type="Panel" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0.95)
layout_mode = 0
offset_left = 240.0
offset_top = 150.0
offset_right = 1040.0
offset_bottom = 230.0

[node name="FeedbackLabel" type="Label" parent="UI/FeedbackPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="CompletePopup" type="PopupPanel" parent="UI"]
position = Vector2i(340, 200)
size = Vector2i(600, 400)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CompletePopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 596.0
offset_bottom = 396.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="UI/CompletePopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "üéâ ÊÅ≠ÂñúÈÄöÂÖ≥ÔºÅ"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="UI/CompletePopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ÁªüËÆ°‰ø°ÊÅØ"
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="UI/CompletePopup/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "ÁªßÁª≠ÂÜíÈô©"

[node name="Audio" type="Node" parent="."]

[node name="CorrectSound" type="AudioStreamPlayer" parent="Audio"]

[node name="WrongSound" type="AudioStreamPlayer" parent="Audio"]

[node name="TimeoutSound" type="AudioStreamPlayer" parent="Audio"]
